2001-10-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, FileAccess.cc: more home_auto fixes;
	  SameLocationAs returns true even if o->home is null.

2001-10-09  Glenn F. Maynard <g_ld@zewt.org>

	* Time.cc, Time.h, commands.cc, complete.cc:

	Time and Timer classes in Time.{cc,h}.  Implemented only a
	couple operators; add others as required.  This can probably be fairly
	widely-used; I didn't implement it anywhere else, though.  It doesn't
	cast to anything; that just causes problems.

	Disabled short help for: rels renlist reget reput

	added references: [re]ls, [re]nlist, [re]get, [re]cls, [re]put
	Help is down to 23 lines (from 25.)  How about changing help to use
	ColumnOutput?  That might cut it down further.  (Due to the length of
	some short help, it might not, though--not on an 80x25, anyway.)

	Updated [c]ls help; it was too long.

2001-10-08  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix site command broken by ls changes.
	* FileAccess.h, FileAccess.cc, Http.cc, Http.h, ftpclass.cc, ftpclass.h:
	  NetAccess.cc, NetAccess.h: new method ResetLocationData; reset
	  home_auto on Connect/Login/AnonymousLogin.
	* FileAccess.h, Fish.cc, ftpclass.cc, ftpclass.h: (FA::set_home) new
	  method; use it; (Ftp::PropagateHomeAuto) new method; use it; fixed
	  bug with unsynced home's.

2001-10-08  Glenn F. Maynard <g_ld@zewt.org>

	* ColumnOutput.cc, commands.cc, complete.cc, complete.h, lftp_rl.c:

	Reupdated my address.

	Add cls, recls and rels to list of remote-completers.

	Make local completion mimic remote completion by forming a FileSet.
	This simplifies completion, gets rid of ignore_non_dirs (which was
	causing some really obscure problems with completion adding one too
	many slashes--didn't track this down since ignore_non_dirs isn't used
	anymore) and gives us color (etc) for local completion.  I didn't
	actually delete ignore_non_dirs yet.

	Add status feedback for remote completion, in the message area.  If -q